index file name changed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p>Pronouns: He/Him/His</p>
           <p>Email :
             <div >
-            <a href="mailto:buddhiashan.mallikakankanamalage@utsa.edu"  class="text-wrap"> buddhiashan.mallikakankanamalage@utsa.edu</a>
+            <a href="mailto:buddhiashan.mallikakankanamalage1@utsa.edu"  class="text-wrap emdisable"> buddhiashan.mallikakankanamalage@utsa.edu</a>
           </div>
         </p>
         
