--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </li>
           </ul>
         </p>
-          <h3>Recent Publications</h3>
+          <h3>Publications</h3>
           <p>
           <ul>
             <li>
