add linkedin account

--- a/index.html
+++ b/index.html
@@ -36,18 +36,24 @@
           </div>
           <br>
           <p>PhD Candidate in Computer Science at <a href="https://www.utsa.edu/">UTSA</a></p>
-          <p>Pronouns: He/Him/His</p>
+          <p>Pronouns: He/ Him/ His</p>
           <p>Email :
             <div >
             <a href="mailto:buddhiashan.mallikakankanamalage1@utsa.edu"  class="text-wrap emdisable"> buddhiashan.mallikakankanamalage@utsa.edu</a>
           </div>
         </p>
+        <p>Linkedin :
+          <div >
+          <a href="https://www.linkedin.com/in/buddhiashan" target="_blank"> Buddhi Ashan M.K.</a>
+        </div>
+      </p>
         
         <div>
+          <p>Curriculum Vitae
             <a href="misc/Buddhi Ashan MK.pdf" target="_blank">
-           Curriculum Vitae </a>
-
-            <img src="img/pdf.png" class="pdf" alt="">
+              <img src="img/pdf.png" class="pdf" alt=""> </a>
+            <!-- <img src="img/pdf.png" class="pdf" alt=""> -->
+          </p>
           </div>
         </div>
 
