--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </p>
         <p>Linkedin :
           <div >
-          <a href="https://www.linkedin.com/in/buddhiashan" target="_blank"> Buddhi Ashan M.K.</a>
+          <a href="https://www.linkedin.com/in/buddhiashan" target="_blank"> Buddhi Ashan M K</a>
         </div>
       </p>
         
