modified index.html file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <a href="card1.html" class="nav-link ">Research</a>
               </li>
               <li class="nav-item">
-                  <a href="misc/Buddhi Ashan M K.pdf" class="nav-link">Resume</a>
+                  <a href="misc/Buddhi Ashan.pdf" class="nav-link">Resume</a>
               </li>
           </ul>
       </div>
@@ -78,7 +78,7 @@
         </p>
         <p>
           <div class="div_top"> 
-            <a href="misc/Buddhi Ashan M K.pdf" target="_blank">Resume</a> 
+            <a href="misc/Buddhi Ashan.pdf" target="_blank">Resume</a> 
               <!-- <img src="img/pdf.png" class="pdf" alt=""> -->
            
           </div> 
