remove hover on icons

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         </p>
         <p>
           <div class="div_top">
-           <a href="https://www.linkedin.com/in/buddhiashan" target="_blank"> <img src="img/Linkedin.png" class="linkedin" alt=""> </a>
+           <a href="https://www.linkedin.com/in/buddhiashan" target="_blank" class="logo"> <img src="img/Linkedin.png" class="linkedin" alt=""> </a>
            <a href="https://scholar.google.com/citations?user=xYSm9AUAAAAJ&hl=en" target="_blank" class="logo"> <img src="img/Google_Scholar_logo.png" class="pdf" alt="no_img"> </a>
-           <a href="https://orcid.org/0009-0000-9961-4384" target="_blank"> <img src="img/orcid_logo.svg" class="pdf" alt=""> </a>
+           <a href="https://orcid.org/0009-0000-9961-4384" target="_blank" class="logo"> <img src="img/orcid_logo.svg" class="pdf" alt=""> </a>
          </div>
        </p>
       
