--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                   <a href="#" class="nav-link active">About Me</a>
               </li>
               <li class="nav-item">
-                  <a href="card1.html" class="nav-link ">Research</a>
+                  <a href="card.html" class="nav-link">Projects</a>
               </li>
               <li class="nav-item">
-                  <a href="misc/Buddhi Ashan.pdf" class="nav-link">Resume</a>
+                  <a href="misc/Buddhi Ashan.pdf" class="nav-link" target="_blank">Resume</a>
               </li>
           </ul>
       </div>
