add modified index.html and css file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/ashan.css" />
+    <link rel="stylesheet" href="styles/profile.css" />
     <link rel="stylesheet" href="styles/nav.css" />
   </head>
   <header>
