--- a/card.html
+++ b/card.html
@@ -100,7 +100,7 @@
                 </ul>
   
                 </p>
-                <!-- <a href="#" class="btn btn-primary" target="_blank">Paper</a> -->
+                        <!-- <a href="#" class="btn btn-primary" target="_blank">Paper</a> -->
               </div>
             </div>
           </div>
@@ -123,7 +123,7 @@
                 </ul>
 
                 </p>
-                <!-- <a href="#" class="btn btn-primary" target="_blank">Paper</a> -->
+                <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2313039&HistoricalAwards=false" class="btn btn-primary" target="_blank">NSF Award #2313039</a>
               </div>
             </div>
   
@@ -147,6 +147,7 @@
     
                   </p>
                   <a href="https://scooterlab.utsa.edu/" class="btn btn-primary" target="_blank">Go to Scooter Lab</a>
+                  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2234516" class="btn btn-primary" target="_blank">NSF Award #2234516</a>
                 </div>
               </div>
             </div>
