--- a/index.html
+++ b/index.html
@@ -122,17 +122,21 @@
             <li>
               Doctor of Philosophy (Ph.D.) in Computer Science | Fall 2019 – Summer 2024 (Expected) <br>
               <a href="https://www.utsa.edu/">The University of Texas at San Antonio</a>
-              <p> Dissertation : <i>Geometric intersection and approximate nearest neighbor similarity search over large geospatial polygonal datasets.</i></p>
+              <p> <b>Dissertation : </b><i>Geometric intersection and approximate nearest neighbor similarity search over large geospatial polygonal datasets.</i>
+              <br>
+                <b>Advisor : </b><a href="http://www.cs.utsa.edu/~sprasad/" >Dr. Sushil K. Prasad</a>,
+                <b>Co-advisor : </b><a href="https://sites.mst.edu/puri/" >Dr. Satish Puri</a>
+              </p>
             </li>
             <li>
               Master of Science (M.S.) in Computing and Information Science | Fall 2017 - Spring 2019 <br>
               <a href="https://www.shsu.edu/">Sam Houston State University</a> 
-              <p>Project : <i>Performance evaluation of transfer learning for pornographic detection.</i></p>
+              <p><b>Project :</b> <i>Performance evaluation of transfer learning for pornographic detection.</i></p>
             </li>
             <li>
               Bachelor of Science (B.Sc.) (Special) in Computer Science | 2011 November - 2016 May  <br>
               <a href="https://www.kln.ac.lk/">University of Kelaniya</a>, Sri Lanka 
-              <p>Dissertation : <i>Recognition of vehicle license plates using MATLAB.</i> </p>
+              <p><b>Dissertation :</b> <i>Recognition of vehicle license plates using MATLAB.</i> </p>
             </li>
           </ul>
         </p>
