--- a/card.html
+++ b/card.html
@@ -75,7 +75,7 @@
                 implementation, we employ three effective filters which have not been used in prior work on polygon clipping: 1) Commonminimum-bounding-rectangle filter, 2) Count-based filter, and 3) Line-segment-minimum-bounding-rectangle filter. They drastically reduce O(n<sup>2</sup> ) candidate edge pairs comparisons by 80%- 99%, leading to significantly faster parallel execution. In our experiments, C++ CUDA-based implementation yields up to 40X speedup over real-world datasets, processing two polygons with a total of 174K vertices on an Nvidia Quadro RTX 5000 GPU compared to the sequential Foster’s algorithm running on an Intel Xeon Silver 4210R CPU.
 
               </p>
-              <a href="misc/Efficient_PRAM_and_Practical_GPU_Algorithms_for_Large_Polygon_Clipping_with_Degenerate_Cases.pdf" class="btn btn-primary" target="_blank">Go to Paper</a>
+              <a href="https://ieeexplore.ieee.org/abstract/document/10171568" class="btn btn-primary" target="_blank">Go to Paper</a>
             </div>
           </div>
         </div>
