--- a/card.html
+++ b/card.html
@@ -179,11 +179,12 @@
 
     <footer class="py-5">
       <div class="container">
-        <p class="m-0 text-center text-black-50">
-          Copyright © Buddhi Ashan <span id="copyright"></span>
-        </p>
+      <p class="m-0 text-center text-black-50">
+      Copyright © Buddhi Ashan <span id="copyright"><script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span>
+      <br><br>
+      </p>
       </div>
-    </footer>
+      </footer>
 
     <!-- Link to jQuery and Bootstrap JS -->
     <script
