--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <a href="#" class="nav-link active">About Me</a>
               </li>
               <li class="nav-item">
-                  <a href="card.html" class="nav-link">Projects</a>
+                  <a href="projects.html" class="nav-link">Projects</a>
               </li>
               <li class="nav-item">
                   <a href="misc/Buddhi Ashan.pdf" class="nav-link" target="_blank">Resume</a>
