add new publications and on going papers, change progect image folder name, change best paper icons, add title image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Font Family -->
 
     <!-- Link to Bootstrap CSS -->
+   
+    <link rel="icon" href="img/title.ico" type="image/icon type">
+
     <link
      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -42,7 +45,7 @@
       <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
           <ul class="navbar-nav ml-auto flex-nowrap">
               <li class="nav-item">
-                  <a href="#" class="nav-link active">About Me</a>
+                  <a href="#" class="nav-link active">Biography</a>
               </li>
               <li class="nav-item">
                   <a href="projects.html" class="nav-link">Projects</a>
@@ -103,7 +106,7 @@
         
         <div class="col-md-8" class="info">
           <aside>
-            <h3>Bio</h3>
+            <h2>Biography</h2>
           <p class="bio">
           I am a Computer Science Ph.D. candidate at the University of Texas, San Antonio, specializing in geometric intersection and approximate nearest neighbor similarity search within expansive geospatial polygonal datasets. Proficient in parallel and distributed computing, high-performance computing, GPU programming, and spatiotemporal data processing, my research focuses on exploiting parallel computing in heterogeneous and distributed platforms to enhance the performance and scalability of polygonal operations. My expertise lies in architecting efficient data structures and algorithms for multi-core and many-core systems, contributing nuanced insights at the confluence of computer science and geospatial data, addressing intricacies in geometric computations on large datasets.
           </p>
@@ -181,6 +184,11 @@
           <p>
           <ul>
             <li>
+              <p>Ashan, M. K. Buddhi, Satish Puri, and Sushil K. Prasad. <i>“Extending segment tree for polygon clipping and parallelizing using OpenMP and OpenACC compiler directives.”</i> 53rd International Conference on Parallel Processing (ICPP). IEEE, 2024 <b>(Accepted).</b> </b>
+          
+              </p>
+            </li>
+            <li>
               <p>Ashan, M. K. Buddhi, Satish Puri, and Sushil K. Prasad. <i>"Efficient PRAM and Practical GPU Algorithms for Large Polygon Clipping with Degenerate Cases."</i> 2023 IEEE/ACM 23rd International Symposium on Cluster, Cloud and Internet Computing (CCGrid). <a href="https://ieeexplore.ieee.org/abstract/document/10171568">IEEE</a>,2023<b> (Acceptance rate 21%. Best paper finalist). </b>
                 <img src="img/badge1.png" class="badge-img" alt="badge1" />
                 <img src="img/badge2.png" class="badge-img" alt="badge2" />
@@ -197,6 +205,15 @@
               Ashan, M. K. Buddhi, and N. G. J. Dias. <i>"Recognition of Vehicle License Plates using MATLAB."</i> <a href="https://www.researchgate.net/profile/N-G-J-Dias/publication/310457959_RECOGNITION_OF_VEHICLE_LICENSE_PLATES_USING_MATLAB/links/582dd41908ae102f072daf08/RECOGNITION-OF-VEHICLE-LICENSE-PLATES-USING-MATLAB.pdf">European International Journal of Science and Technology</a> 5.6, 2016.
               </p>
             </li>
+          <p>
+             <b>Under Review</b>
+          </p>
+          <li>  
+            <p>
+              Ashan, M. K. Buddhi, Satish Puri, and Sushil K. Prasad. <i>“Quad tree-based polygon encoding for shape-based similarity over large datasets of exponential area variations.”</i> 32nd ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems (SIGSPATIAL). ACM, 2024
+            </p>
+          </li>  
+
           </ul>
         </p>
           </aside>
