change index file change project images

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <p>
           <ul>
             <li>
-              <p>Ashan, M. K. Buddhi, Satish Puri, and Sushil K. Prasad. <i>“Extending segment tree for polygon clipping and parallelizing using OpenMP and OpenACC compiler directives.”</i> 53rd International Conference on Parallel Processing (ICPP). IEEE, 2024 <b>(Accepted).</b> </b>
+              <p>Ashan, M. K. Buddhi, Satish Puri, and Sushil K. Prasad. <i>“Extending segment tree for polygon clipping and parallelizing using OpenMP and OpenACC compiler directives.”</i> 53rd International Conference on Parallel Processing (ICPP). 2024 <b>(Accepted).</b> </b>
           
               </p>
             </li>
@@ -221,6 +221,7 @@
 
 
       </main>
+    </div>
 <br>
 <br>
     <footer class="py-5">
