--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    
-
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
       rel="stylesheet"
@@ -50,7 +49,7 @@
               <a href="projects.html" class="nav-link active">Projects</a>
           </li>
           <li class="nav-item">
-              <a href="misc/Buddhi Ashan.pdf" class="nav-link" target="_blank">Resume</a>
+              <a href="misc/MKB Ashan.pdf" class="nav-link" target="_blank">Resume</a>
           </li>
       </ul>
   </div>
