--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <p>Pronouns: He/ Him/ His</p>
          <p>
             <div >
-              <img src="img/Profile/outlook_logo.png" class="uotlook" alt=""> 
+              <!-- <img src="img/Profile/outlook_logo.png" class="uotlook" alt="">  -->
              <a href="mailto:buddhiashan.mallikakankanamalage1@utsa.edu"  class="text-wrap emdisable"> buddhiashan.mallikakankanamalage@utsa.edu</a>
            </div>
         </p>
