big data submission

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h4>Mallika Kankanamalage</h4>
           </div>
           <br>
-          <p>PhD Candidate in Computer Science <br>
+          <p>Postdoctoral Researcher <br>
             <a href="https://www.utsa.edu/">The University of Texas at San Antonio</a>
           </p>
           <p>Pronouns: He/ Him/ His</p>
@@ -108,7 +108,7 @@
           <aside>
             <h2>Biography</h2>
           <p class="bio">
-          I am a Computer Science Ph.D. candidate at the University of Texas, San Antonio, specializing in geometric intersection and approximate nearest neighbor similarity search within expansive geospatial polygonal datasets. Proficient in parallel and distributed computing, high-performance computing, GPU programming, and spatiotemporal data processing, my research focuses on exploiting parallel computing in heterogeneous and distributed platforms to enhance the performance and scalability of polygonal operations. My expertise lies in architecting efficient data structures and algorithms for multi-core and many-core systems, contributing nuanced insights at the confluence of computer science and geospatial data, addressing intricacies in geometric computations on large datasets.
+          I am a Postdoctoral Researcher at the University of Texas, San Antonio, specializing in geometric intersection and approximate nearest neighbor similarity search within expansive geospatial polygonal datasets. Proficient in parallel and distributed computing, high-performance computing, GPU programming, and spatiotemporal data processing, my research focuses on exploiting parallel computing in heterogeneous and distributed platforms to enhance the performance and scalability of polygonal operations. My expertise lies in architecting efficient data structures and algorithms for multi-core and many-core systems, contributing nuanced insights at the confluence of computer science and geospatial data, addressing intricacies in geometric computations on large datasets.
           </p>
           <br>
           <h3 >Research Interests</h3>
@@ -190,6 +190,16 @@
           <h3>Publications</h3>
           <p>
           <ul>
+             <li>  
+              <p>
+                Ashan, M. K. Buddhi, Satish Puri, and Sushil K. Prasad. <i>“Quad tree-based polygon encoding for shape-based similarity over large datasets of exponential area variations.” 2025 IEEE International Conference on Big Data (BigData). IEEE, 2025. <b> (Accepted. Acceptance rate 18.7%.). </b>
+              </p>
+            </li>  
+            <li>
+              <p>
+                Khan, U., Wijewickrama, R., Ashan, M. K. Buddhi, Sakib, A. H. M., Trinh, K., Duthie, C., Najafian, N., ... & Jadliwala, M. (2025). <i><a href="https://ieeexplore.ieee.org/abstract/document/11038542">"ScooterLab: A Programmable and Participatory Sensing Research Testbed using Micromobility Vehicles.</a>"</i> 2025 IEEE International Conference on Pervasive Computing and Communications Workshops and other Affiliated Events (PerCom Workshops) (pp. 555-557). IEEE Computer Society.
+              </p>
+            </li>
             <li>
               <p>Ashan, M. K. Buddhi, Satish Puri, and Sushil K. Prasad. <i>“<a href="https://dl.acm.org/doi/abs/10.1145/3673038.3673141">Extending segment tree for polygon clipping and parallelizing using OpenMP and OpenACC compiler directives.</a>”</i> 53rd International Conference on Parallel Processing (ICPP). 2024 </b>
           
@@ -212,15 +222,6 @@
               Ashan, M. K. Buddhi, and N. G. J. Dias. <i>"<a href="https://www.researchgate.net/profile/N-G-J-Dias/publication/310457959_RECOGNITION_OF_VEHICLE_LICENSE_PLATES_USING_MATLAB/links/582dd41908ae102f072daf08/RECOGNITION-OF-VEHICLE-LICENSE-PLATES-USING-MATLAB.pdf">Recognition of Vehicle License Plates using MATLAB.</a>"</i> European International Journal of Science and Technology 5.6, 2016.
               </p>
             </li>
-          <p>
-             <b>Under Preparation</b>
-          </p>
-          <li>  
-            <p>
-              Ashan, M. K. Buddhi, Satish Puri, and Sushil K. Prasad. <i>“Quad tree-based polygon encoding for shape-based similarity over large datasets of exponential area variations.”
-            </p>
-          </li>  
-
           </ul>
         </p>
           </aside>
@@ -232,7 +233,7 @@
     <footer class="py-5">
       <div class="container">
       <p class="m-0 text-center text-black-50">
-      Copyright © Buddhi Ashan 2025
+      Copyright © Buddhi Ashan 2025 November
       <br><br>
       </p>
       </div>
