--- a/projects.html
+++ b/projects.html
@@ -100,10 +100,9 @@
                 </ul>
   
                 </p>
-                        <!-- <a href="#" class="btn btn-primary" target="_blank">Paper</a> -->
+                <a href="https://dl.acm.org/doi/abs/10.1145/3673038.3673141" class="btn btn-primary" target="_blank">Go to Paper</a>
               </div>
-            </div>
-          </div>
+            </div> 
 
         <div class="row">
           <!-- <div class="col-md-4 mb-4"> -->
@@ -111,7 +110,7 @@
               <h3 class="card-title">Approximate Nearest Neighbor Similarity Search for Large Polygonal and Trajectory Datasets</h3>
               <hr>
             <div class="card-img">
-              <img src="img/projects/poly1poly2overlap.png" class="card-img-2" alt="poly1poly2overlap" />
+              <img src="img/projects/similarshape.png" class="card-img-2" alt="Shpae-based similarity search" />
             </div>
               <div class="card-body">
                 
@@ -124,6 +123,7 @@
 
                 </p>
                 <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2313039&HistoricalAwards=false" class="btn btn-primary" target="_blank">NSF Award #2313039</a>
+                <!-- <a href="#" class="btn btn-primary" target="_blank">Go to Paper</a> -->
               </div>
             </div>
   
@@ -132,7 +132,7 @@
           <div class="row">
             <!-- <div class="col-md-4 mb-4"> -->
               <div class="card" style="width: 100%">
-                <h3 class="card-title">EScooterLab - A Programmable and Participatory Sensing Testbed using Micromobility Vehicles</h3>
+                <h3 class="card-title">ScooterLab - A Programmable and Participatory Sensing Testbed using Micromobility Vehicles</h3>
                 <hr>
                 <div class="card-img">
                 <img src="img/projects/ScooterLab_icon.jpeg" class="card-img-top" alt="..." />
@@ -148,6 +148,7 @@
                   </p>
                   <a href="https://scooterlab.utsa.edu/" class="btn btn-primary" target="_blank">Go to Scooter Lab</a>
                   <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2234516" class="btn btn-primary" target="_blank">NSF Award #2234516</a>
+                  <a href="https://ieeexplore.ieee.org/abstract/document/11038542" class="btn btn-primary" target="_blank">Go to Paper</a>
                 </div>
               </div>
             </div>
@@ -155,7 +156,7 @@
             <div class="row">
               <!-- <div class="col-md-4 mb-4"> -->
                 <div class="card" style="width: 100%">
-                  <h3 class="card-title">ECS6253: Survey-based Term Project</h3>
+                  <h3 class="card-title">CS6253: Survey-based Term Project</h3>
                   <hr>
                   <div class="card-img">
                   <img src="img/projects/Project.jpeg" class="card-img-top" alt="..." />
@@ -180,7 +181,7 @@
     <footer class="py-5">
       <div class="container">
       <p class="m-0 text-center text-black-50">
-      Copyright © Buddhi Ashan <span id="copyright"><script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span>
+      Copyright © Buddhi Ashan 2025 November
       <br><br>
       </p>
       </div>
