project page updated

--- a/projects.html
+++ b/projects.html
@@ -124,6 +124,7 @@
                 </p>
                 <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2313039&HistoricalAwards=false" class="btn btn-primary" target="_blank">NSF Award #2313039</a>
                 <!-- <a href="#" class="btn btn-primary" target="_blank">Go to Paper</a> -->
+                <a href="https://rrpress.utsa.edu/items/f3f6d842-4371-4e33-9c29-9669968ce15a" class="btn btn-primary" target="_blank">Go to Poster</a>
               </div>
             </div>
   
